--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             </nav>
         </div>
     </header>
-    <img src="images/collage.png" alt="Задний фон" class="background">
+    <img src="/project8march/images/collage.png" alt="Задний фон" class="background">
     <main>
         <div class="text1">
             <h1>Введение</h1>
@@ -25,11 +25,11 @@
             В википедии написано, что 8 марта - день солидарности женщин в борьбе за женские права и эмансипацию. То есть, этот праздник означает, своего рода, частичную победу над угнетением целого женского пола признание женщин, как людей и возвращение соответсвенных прав. Непризнание мужчинами целого противоположного пола, составляющего большую часть население планеты, для меня реально не укладывается в голове. Сложно представить, что женщин, продолжающих род человеческий вынашивающих 9 месяцев в себе целую новую жизнь, стоит ограничивать хоть в каких то правах и, что ещё хуже, гнобить и избивать при любой возможности. Тем не менее, до сих пор и в России к девушкам не могут начать относится полноценно как к равным и 8 марта считается днём женской красоты, заботы и тепла, хотя за этим праздником стоит немаленькая история из борьбы и страданий.
             <h1>Временная шкала исторических промежутков развития феминизма</h1>
             <div class="timeline">
-                <a href="#section1" class="marker"><img src="images/feminism2-768x512.png" alt="Section 1"></a>
-                <a href="#section2" class="marker"><img src="images/Louise_Weiss.jpg" alt="Section 2"></a>
-                <a href="#section3" class="marker"><img src="images/still-p.015.jpeg" alt="Section 3"></a>
-                <a href="#section4" class="marker"><img src="images/22-3.jpg" alt="Section 4"></a>
-                <a href="#section5" class="marker"><img src="images/1200px-International_Women's_Day_2017_-_03_(33202921961).jpg" alt="Section 5"></a>
+                <a href="#section1" class="marker"><img src="/project8march/images/feminism2-768x512.png" alt="Section 1"></a>
+                <a href="#section2" class="marker"><img src="/project8march/images/Louise_Weiss.jpg" alt="Section 2"></a>
+                <a href="#section3" class="marker"><img src="/project8march/images/still-p.015.jpeg" alt="Section 3"></a>
+                <a href="#section4" class="marker"><img src="/project8march/images/22-3.jpg" alt="Section 4"></a>
+                <a href="#section5" class="marker"><img src="/project8march/images/1200px-International_Women's_Day_2017_-_03_(33202921961).jpg" alt="Section 5"></a>
             </div>
             <div class="undertext">
                 <p>XVIII–XIX века: Истоки феминизма</p>
@@ -40,16 +40,16 @@
             </div>
             <h1 id="section1">XVIII–XIX века: Истоки феминизма</h1>
             <p>В этот период, включающий в себя эпоху Просвещения, развитие литературы, философии, образования и науки в целом, повлёк за собой необратимые изменения в обществе. Гендерные предрассудки пошатнулись не только на фоне развития человеческой мысли, но также нельзя было отрицать деятельность и вклад правительниц, императриц и королев того времени. Множество французский писателей и философов конца 18-го века, таких как: Вольтер, Шарль Луи де Монтескьё, Дени Дидро, Клод Адриан Гельвеций и другие выступали за отказ от умственных различий по биологическому признаку и считали, что женщины способны составлять интеллектуальную конкуренцию мужчине, и дав дамам образование, технический прогресс устремится вперёд. Но для принятия женских прав этого было мало, хотя процесс уже неизбежно запустился: некоторые женщины начали получать финансовую независимость от мужчин, открывать свои салоны, собирать в них привелигированных людей и учавствовать в политических играх косвенно.</p> 
-            <img src="images/1024px-Lesueur_-_Club_Patriotique_de_Femmes.jpg" alt="патриоткружок"> 
+            <img src="/project8march/images/1024px-Lesueur_-_Club_Patriotique_de_Femmes.jpg" alt="патриоткружок"> 
             <p>Франция стала неким центром развития идеи гендерного равенства, так в 1791 году, Олимпия де Гуж, французская писательница и активистка, публикует "Декларацию прав женщины и гражданки", требуя равных прав для женщин. Её работа стала одним из первых феминистских манифестов. Потом в Англии Мэри Уолстонкрафт в 1792 году публикует "В защиту прав женщин", где утверждает, что женщины не inferior (ниже) мужчин, а лишь лишены образования и возможностей.в Германии профеминистом считается Теодор Готтлиб фон Гиппель, чей труд «Об улучшении гражданского положения женщины» (1793) задал существенный тон в истории развития феминистской мысли его страны. Эти идеи начали распространятся по всей Европе и США. Не вдаваясь в слишком глубокие подробности, стоит отметить ещё несколько трудов, пошатнувших стереотипы о неравенстве:в Германии профеминистом считается Теодор Готтлиб фон Гиппель, чей труд «Об улучшении гражданского положения женщины» (1793) задал существенный тон в истории развития феминистской мысли его страны. Ещё важно отметить, что феминизм этого периода был тесно связан с аболиционизмом (движение за отмену рабства), поскольку борьба шла за одни идеи, из-за чего оба движения стремительно разрастались.</p>
             <h1 id="section2">Первая волна феминизма (конец XIX — начало XX века): Борьба за избирательные права</h1>
             <p>Время шло, изменения очень медленно проявлялись по всему миру, но к законадательному утверждению дело не подходило. И тут в историю врываются суфражистки. Для тебя, в представлении они не нуждаются. Это сообщество изначально ведь даже не прибегало к радикальным методам, были буклеты, речи, санкционированные митинги, только когда они поняли, что это плодов не приносит, уже пошли протесты, приковывание самих к себя к столбам, агрессивные агитации и доходило до терактов. Они начали свою деятельность на территориях Британской импреии и США, там вся заварушка и началась.Одно из самых опасных нападений, совершенных суфражистками, нападение на Королевский театр было совершено Мэри Ли, Глэдис Эванс, Лиззи Бейкер и Мейбл Каппер, которые попытались поджечь здание во время многолюдного обеденного дневного спектакля, на котором присутствовал премьер-министр Его Святейшество Асквит . Рядом со сценой была оставлена канистра с порохом, а в проекционную кабину, где находились легковоспламеняющиеся кинопленки, были брошены бензин и зажженные спички. Ранее в тот же день Мэри Ли метнула топор в Асквита, но тот едва не попал в него, а вместо этого порезал ухо ирландскому депутату Джону Редмонду .</p>
-            <img src="images/Suffrage_terrorism.jpg" alt="sufrage">
+            <img src="/project8march/images/Suffrage_terrorism.jpg" alt="sufrage">
             <p>Наконец, по времени мы дошли до зарождения феминизма в России. Волна либеральных движений дошла с Европа до России, хотя уже 1812 был создан первый российский женский патриотический кружок, и деятельность Екатрины II И Марии Фёдоровной тоже была частично направлена на приобретение прав девушками (были созданы церковные и воспитательные образовательные учреждения для девиц, а в 1860 году девушек впервые допустили к лекциям в университетах,не на законодательном уровне), но массовое распространение движение началось в начале XIX века. </p>
             <p>Первой разрешённой женской организацией было основанное в 1895 г. Русское женское взаимоблаготворительное общество. В него входили А. П. Философова, А. Н. Шабанова, А. Н. Энгельгардт, О. А. Шапира, А. Н. Пешкова-Толиверова, председательницей являлась А. Н. Шабанова. В начале своей работы общество занималось общественно-бытовыми вопросами. </p>
-            <img src="images/07352903032022_3a13088d023e9f50b6d7dd9d789d9ee05e51ab28.jpg" alt="uchinicy">
+            <img src="/project8march/images/07352903032022_3a13088d023e9f50b6d7dd9d789d9ee05e51ab28.jpg" alt="uchinicy">
             <p>Стоит сказать об общем положении женщин в Российской империи, по скольку оно было не завидным. На законодательном уровне были прописаны регулировки семейных взаимоотношений, где жена была обязана заниматься уходом детей, содержать дом в порядке и угождать мужу, муж должен приносить материальные блага в семью и хотя бы считать жену за человека. На фоне таких правил и сильного распространения христианских учений, мужчина всегда главенствовал в семье и обществе, а женщина дополнение к нему. </p>
-            <img src="images/8marta.jpg" alt="plakat">
+            <img src="/project8march/images/8marta.jpg" alt="plakat">
             <p>Октябрьская революция переменила многое. Касательно женских прав «Чтобы добиться [женской] эмансипации и сделать женщину равной мужчине, — писал Владимир Ленин в 1919 году, через два года после революции, следуя марксистским теориям, лежащим в основе советского коммунизма, — необходимо социализировать женщин и позволить им участвовать в общем производительном труде. Тогда женщина станет равной мужчине»[4]</p>
             <p>Что же приобрели девушки?</p>
             <ol>
@@ -64,7 +64,7 @@
             <p>Тем не менее, несмотря на гендерное равенство, заявленное социализмом, женщины не учавствовали в основных политических процессах и институтах[4].</p>
             <h1 id="section3">Вторая волна феминизма (1960-е — 1980-е годы): Борьба за равенство в обществе</h1>
             <p>Множество интернет-ресурсов описывают собтыия этой волны относительно США, видимо потому что там борьба щла более открыто и радикально. в 1968 году прошёл ряд протестов напрямую не связанных с борьбой за женские права, но подливающий масло в огонь. Во второй половине 20-го века девушки приняли более "радикальные" позиции, требуя отстутствие дискрминации по половому признаку, конституционное право на голос и прекращение культуры "идеальной домохозяйки" и избавление от постоянной сексуализации. </p>
-            <img src="images/c714ce098ddcc03ed2c26.png" alt="womanlozung">
+            <img src="/project8march/images/c714ce098ddcc03ed2c26.png" alt="womanlozung">
             <p>Печален тот факт, что феминистки до сих пор борятся с теми же предрассудками и предвзятым отношением, спустя почти 80 лет.</p>
             <p>К 1970 году сформировалась иная позиция, более рационализированная, на мой взгляд. Пояивлись идеи не совсем о "равных с мужчиной правах", а о "позитивном отличии". Началась борьба больше с патриархатом, как с системой, определяющей общество. Важно отметить, что СМИ и медиасферы ввели тогда образ радикальной феминистки, как неухоженной толстой муже-подобной женщины, из-за чего равенсто прав начало восприниматься, как становление мужчиной. </p>
             <p>Информации очень много по этому периоду, поэтому вот ключевые события, повлиявшие на дальнейшее развитие движения:</p>
@@ -77,7 +77,7 @@
             <p>Забавно то, что неопатриархат массово разошёлся уже тогда, после конца войны, оставшиеся мужчины свалили все обязанности на женщин, не выходя на работу, бухая, продолжая ущемлять женщин и требовать отношение как к патриархальному мужчине, хотя они сами из схожих качеств имели только член и хрупкое эго. Когда как будто жизнь начала стабилизироваться (аж к 90-ым годам), тут и случился развал СССР и никакой вторый волны так и не пришло в Советский союз.</p>
             <h1 id="section4">Третья волна феминизма (1990-е — 2000-е годы): Разнообразие и интерсекциональность</h1>
             <p>Третья волна феминизма значительно отличалась от двух предыдущих. Если раньше велась открытая борьба за одну цель, то этот период стал неким временем "самопознания" для женщин[6]. Большая часть целей второй волны были достигнуты, и даже сами девушки не видели такой явной необходимости в радикальном подходе, хоть дискриминация никуда и не делась.</p>
-            <img src="images/ocFeQaPo9zg.jpg" alt="3wave">
+            <img src="/project8march/images/ocFeQaPo9zg.jpg" alt="3wave">
             <p>В этот момент пошло много ответвлений от либерального и радикального феминизмов, по скольку дамы началаи рассуждать от самих себя, ищя собственный кофморт, не только борясь за общие права женского пола. Концепция патриархата осталась, но открытая борьба с ней ушла закулисы в долгую игру. Проводились дебаты, уходил фокус на права цветных женщин.</p>
             <p>Идеология третьей волны фокусировалась на более постструктуралистской интерпретации гендера и сексуальности[8]. Феминистские теории третьей волны включали в себя элементы квир-теории, антирасизма, вуманизма, постколониальной теории, экзистенциализма, трансцендитализма, постмодернизма, транснационализма, киберфеминизма, экофеминизма, индивидуалистского феминизма, проблематики трансгендерности и др.</p>
             <p>Касаемо ситуации в новоиспечённой России в эти периоды всё идёт не лучшим образом. Произошёл большой срез женских кадров и всё откатилось к роли домохозяек, менее 3% женщин составляли ответственные должности на политических позициях, и те не разделяли феминистических идей. С приходом к власти Владимира Путина ситуация немного улучшилась.</p>
@@ -104,7 +104,7 @@
         <p><a href="https://ru.ruwiki.ru/wiki/Третья_волна_феминизма">8. Третья волна феминизма</a></p>
         <p><a href="https://translated.turbopages.org/proxy_u/en-ru.ru.c8135ed0-67cdb036-a03efc56-74722d776562/https/en.wikipedia.org/wiki/Fourth-wave_feminism">9. Феминизм четвёртой волны</a></p>
         <p><a href="https://cyberleninka.ru/article/n/chetvertaya-volna-feminizma-politicheskiy-diskurs-i-lidery-mneniy-v-sotsialnoy-seti-tvitter/viewer">10. Четвёртая волна феминизма</a></p>
-        <img src="images/593886f2fd7a2cafdd6885fb640f75fd.jpg" alt="perdunya">
+        <img src="/project8march/images/593886f2fd7a2cafdd6885fb640f75fd.jpg" alt="perdunya">
     </main>
     <footer>
         <h2>Если вдруг захочешь скинуть денег</h2>
