--- a/halloffame.html
+++ b/halloffame.html
@@ -12,10 +12,10 @@
             <h1 class="header-title">Достойные женщины по моему объективному мнению</h1>
         </div>
     </header>
-    <img src="/project8march/images/collage.png" alt="Задний фон" class="background">
+    <img src="images/collage.png" alt="Задний фон" class="background">
     <main>
         <div class="maincard-container">
-            <img src="/project8march/images/love3_no_bg.png" alt="love">
+            <img src="images/love3_no_bg.png" alt="love">
             <div class="maincard">
                 <h2>Легенда по понятным причинам, Валерия Акулова</h2>
                 <p>Любимая мной дама, радикальная феминистка, настолько, что и я по половму признаку под огонь могу попасть, учится на дизайне костюма, балдеет от Днд, мечтает стать Богиней (довольно скромно).</p>
@@ -23,14 +23,14 @@
         </div>
         <div class="card-container">
             <div class="gridcards">
-                <img src="/project8march/images/Marie_Curie_c._1920s.jpg" alt="marie">
+                <img src="images/Marie_Curie_c._1920s.jpg" alt="marie">
                 <h2>Мария Кюри</h2>
                 <p>Мария Кюри (урождённая Мария Саломея Склодовская) была первой женщиной, получившей Нобелевскую премию за свои работы в области радиации,</p> 
                 <p>и до сегодняшнего дня оставалась единственной женщиной, получившей две Нобелевские премии (в том числе одну Нобелевскую премию по химии за открытия в области полония и радия).</p> 
                 <p>Она является единственным лауреатом, получившим признание в двух различных научных областях.</p>
             </div>
             <div class="gridcards">
-                <img src="/project8march/images/Hedy_Lamarr_in_The_Heavenly_Body_1944.jpg" alt="hedy">
+                <img src="images/Hedy_Lamarr_in_The_Heavenly_Body_1944.jpg" alt="hedy">
                 <h2>Хеди Ламарр</h2>
                 <p>Хеди Ламарр была актрисой, кинопродюсером и одновременно с этим, и это почти невероятно, изобретателем.</p>
                 <p>Так, во время Второй мировой войны она начала работать над созданием сигнала со скачкообразной перестройкой частоты, который нельзя было бы отследить или заглушить для того, чтобы дистанционно управлять торпедами.</p>
@@ -39,26 +39,26 @@
                 <p>В прошлом такую технологию применять не решились из-за ее сложности. Частично ее внедрили американцы в 1962 году, во времена карибского кризиса, но в полной мере она пришлась в пору в наши дни. Патент лег в основу связи с расширенным спектром, которая стала использоваться повсеместно, от мобильных телефонов до Wi-Fi.</p>
             </div>
             <div class="gridcards">
-                <img src="/project8march/images/Ada_Lovelace_portrait.jpg" alt="ada">
+                <img src="images/Ada_Lovelace_portrait.jpg" alt="ada">
                 <h2>Ада Лавлейс</h2>
                 <p>Авгу́ста А́да Кинг (урождённая Ба́йрон), графиня Ла́влейс  — английский математик. Известна прежде всего созданием описания вычислительной машины, проект которой был разработан Чарльзом Бэббиджем.</p>
                 <p>Составила первую в мире программу (для этой машины). Ввела в употребление термины «цикл» и «рабочая ячейка», считается первым программистом в истории</p>
             </div>
             <div class="gridcards">
-                <img src="/project8march/images/D810_4987_Tu_Youyou,_medicine_(22945001843)_(cropped).jpg" alt="tuyuyu">
+                <img src="images/D810_4987_Tu_Youyou,_medicine_(22945001843)_(cropped).jpg" alt="tuyuyu">
                 <h2>Ту Юю</h2>
                 <p>Ту Юю открыл артемизинин и дигидроартемизинин, которые в настоящее время являются стандартными средствами для лечения малярии.</p> 
                 <p>Артемизинин получают из растения полынь однолетняя, которая используется в китайской традиционной медицине</p>
             </div>
             <div class="gridcards">
-                <img src="/project8march/images/Jeanne_Villepreux-Power.jpg" alt="jeanne">
+                <img src="images/Jeanne_Villepreux-Power.jpg" alt="jeanne">
                 <h2>Жанна Вильпрё-Пауэр</h2>
                 <p>Жанна Вильпрё-Пауэр была морским биологом и создателем первого аквариума. Это произошло в 1832 году.</p>
                 <p>Она наблюдала и экспериментировала с водными организмами, и для этого ей нужно было где-то их держать. Биолог создала три типа аквариумов.</p> 
                 <p>Первый представлял собой стеклянный аквариум для изучения морских обитателей, другой — стеклянный аппарат, помещенный в клетку для использования на мелководье, а третий — еще один аквариум в виде клетки, способный опускать свое содержимое на разную глубину.</p>
             </div>
             <div class="gridcards">
-                <img src="/project8march/images/Launch_of_IYA_2009,_Paris_-_Grygar,_Bell_Burnell_cropped.jpg" alt="bell">
+                <img src="images/Launch_of_IYA_2009,_Paris_-_Grygar,_Bell_Burnell_cropped.jpg" alt="bell">
                 <h2>Джослин Белл Бернелл</h2>
                 <p>Дама Сьюзан Джоселин Белл Бернелл (в девичестве Белл; родилась 15 июля 1943 года) — астрофизик из Северной Ирландии, которая в 1967 году, </p>
                 <p>будучи аспиранткой, открыла первые радиопульсары. Это открытие позже принесло Нобелевскую премию по физике в 1974 году, но она не была среди лауреатов.</p>
